# HA-Zigbee-Migration-Tool

./: .gitignore  README.md  repository.yaml
examples/: anonymization.sql
examples/Z2M/: database.db
examples/Z2M/expected/: database.db
examples/ZHA/: core.device_registry  zigbee.db
examples/ZHA/zigbee-db-as-csv/: attributes_cache_v14.csv  clusters_v14.csv  devices_v14.csv  endpoints_v14.csv  group_members_v14.csv  groups_v14.csv  neighbors_v14.csv  node_descriptors_v14.csv  relays_v14.csv  routes_v14.csv  sqlite_master.csv  sqlite_sequence.csv
ha_zigbee_migration_tool/: .dockerignore  CHANGELOG.md  Dockerfile  config.yaml  pyproject.toml  run.sh
ha_zigbee_migration_tool/src/: config.py  main.py
ha_zigbee_migration_tool/src/config/: logging_config.py
ha_zigbee_migration_tool/src/files/: backup_service.py  file_port.py  json_adapter.py
ha_zigbee_migration_tool/src/migration/: migration_service.py  transformer.py
ha_zigbee_migration_tool/src/sql/: sql_port.py  sqlite_adapter.py
ha_zigbee_migration_tool/src/static/: app.js  style.css
ha_zigbee_migration_tool/src/templates/: index.html
ha_zigbee_migration_tool/tests/: conftest.py  test_main.py
ha_zigbee_migration_tool/tests/files/: test_backup_service.py  test_json_adapter.py
ha_zigbee_migration_tool/tests/integration/: test_migration_service.py
ha_zigbee_migration_tool/tests/migration/: test_migration_service.py  test_transformer.py
ha_zigbee_migration_tool/tests/sql/: test_sqlite_adapter.py
