[project]
name = "ha_zigbee_migration_tool"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "jinja2==3.1.6",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "sqlalchemy==2.0.48",
    "aiofiles==25.1.0",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "httpx==0.28.1",
    "pytest-cov==7.0.0",
    "deepdiff==8.6.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["ha_zigbee_migration_tool/tests"]
asyncio_mode = "auto"
addopts = "--cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["ha_zigbee_migration_tool.src"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
